--- a/templates/videoupload.tmpl
+++ b/templates/videoupload.tmpl
@@ -28,7 +28,7 @@
 <body>
 
 <form method="post" enctype="multipart/form-data">
-    <input placeholder="图片" type="file"/>
+    <input placeholder="视频" type="file"/>
 </form>
 <script>
     $(function () {
